some more changes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
         <div class="nav-part2">
             <ul>
-                <button><li>About</li></button>
-                <button> <li>Projects</li></button>
+                <button><a href="#about-me"><li>About</li></a></button>
+                <button><a href="#skills-section"><li>Skills</li></a></button>
+                <button><a href=""><li>Projects</li></a></button>
                 <button><li>Socials</li></button>
             </ul>
         </div>
@@ -56,7 +57,7 @@
     </section>
 
 
-    <section class="section2">
+    <section class="section2" id="about-me">
         
         <div class="box3">
             <img src="1671517756996.png" alt="">
@@ -83,7 +84,7 @@
          </div>
     </section>
 
-    <section class="progress-bars">
+    <section class="progress-bars" id="skills-section">
         <div class="skill-text">skills, I have</div>
         <div class="bar-box">
             <div class="box" id="box1">
