alot of changes in ui and addition of projects-section

--- a/index.html
+++ b/index.html
@@ -156,47 +156,70 @@
         </div>
     </section>
 
-    
-<!--     <section class="section3">
-        <h1>Skills</h1> 
-        <div class="html-icon">
-            <i class="ri-html5-fill"></i>
+    <h1>Some of my works</h1><br>
+    <section class="section4">
+        <div class="project1">
+            <div class = "box5" id="project-description">
+                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h3>
+            </div>
+            <div class="box6">
+                <img src="project1-img.png" alt="project1">
+            </div>
         </div>
-        <div class="css-icon">
-            <i class="ri-css3-fill"></i>
+        <div class="project2">
+            <div class="box7">
+                <img src="project2-img.png" alt="project2">
+            </div>
+            <div class = "box8" id="project-description2">
+                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h3>
+            </div>
         </div>
-        <div class="js-icon">
-            <i class="ri-javascript-fill"></i>
-        </div>
-        <br><br>
-        <div class="java-icon">
-            <i class="fa-brands fa-java"></i>
-        </div>
-        <div class="python-icon">
-            <i class="fa-brands fa-python"></i>
-        </div>
-        <div class="git-icon">
-            <i class="fa-brands fa-git-alt"></i>
-        </div>
-        <br><br>
-        <div class="github-icon">
-            <i class="fa-brands fa-github"></i>
-        </div>
-        <div class="responsive-design-icon">
-            <span>Responsive design</span>
-        </div>
-        <div class="c++-icon">
-            <span>C++</span>
-        </div>
-        <div class="dsa-icon">
-            <span>DSA</span>
-        </div>
-        <div class="oops-icon">
-            <span>OOPS</span>
+        <div class="project3">
+            <div class = "box9" id="project-description">
+                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h3>
+            </div>
+            <div class="box10">
+                <img src="project3-img.png" alt="project3">
+            </div>
         </div>
     </section>
-    <section class="section4">
-        <h1>Projects</h1>
-    </section> -->
+
+
+    <footer class="footer section bd-container">
+        <div class="footer__container bd-grid">
+            <div class="footer__content">
+                <div>
+                    <a href="#" class="footer__social"><i class='bx bxl-linkedin'></i></a>
+                    <a href="#" class="footer__social"><i class='bx bxl-github'></i></a>
+                    <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                </div>
+            </div>
+
+            <div class="footer__content">
+                <h3 class="footer__title">Quick links</h3>
+                <ul>
+                    <li><a href="#" class="footer__link">Home</a></li>
+                    <li><a href="#" class="footer__link">Skills</a></li>
+                    <li><a href="#" class="footer__link">Projects</a></li>
+                    <li><a href="#" class="footer__link">Reserve your spot</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__content">
+                <h3 class="footer__title">Adress</h3>
+                <ul>
+                    <li>Mumbai, India</li>
+                    <li>9592723960</li>
+                    <li>newakpandey@gmail.com</li>
+                </ul>
+            </div>
+        </div>
+
+        <p class="footer__copy">&#169; 2023 bitu99. All right reserved</p>
+    </footer>
+
 </body>
 </html>
