added footer and alot of other changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <section class = "section1">
+    <section class = "section1" id="home-section">
         <div class="box1">
             <div class="intro">
                 <h1>Hi, I am Akash</h1>
@@ -90,8 +90,8 @@
          </div>
     </section>
 
+    <h1 class="skill-text">Skills, I have</h1>
     <section class="progress-bars" id="skills-section">
-        <div class="skill-text">Skills, I have</div>
         <div class="bar-box">
             <div class="box" id="box1">
                 <div class="text">HTML</div>
@@ -154,14 +154,17 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section><br><br>
 
-    <h1>Some of my works</h1><br>
-    <section class="section4">
+    <!-- -------------project-section----------- -->
+
+    <h1 class="section4-title">Some of my works</h1><br>
+    <section class="section4" id="project-section">
         <div class="project1">
             <div class = "box5" id="project-description">
-                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h3>
+                <h2>Project 1</h2>
+                <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
             </div>
             <div class="box6">
                 <img src="project1-img.png" alt="project1">
@@ -172,14 +175,16 @@
                 <img src="project2-img.png" alt="project2">
             </div>
             <div class = "box8" id="project-description2">
-                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h3>
+                <h2>Project 2</h2>
+                <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
             </div>
         </div>
         <div class="project3">
             <div class = "box9" id="project-description">
-                <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h3>
+                <h2>Project 3</h2>
+                <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
             </div>
             <div class="box10">
                 <img src="project3-img.png" alt="project3">
@@ -187,8 +192,39 @@
         </div>
     </section>
 
-
-    <footer class="footer section bd-container">
+    <!-- ------------footer------------- -->
+    <footer>
+        <div class="footer-box" id="footer-box1">
+            <ul style="display: flex; flex-direction: column; line-height: 0%; padding: 0; margin: 0; gap: 25%;">
+                <h3><li>Quick links</li> </h3>
+                <li><a href="#home-section" class="footer__link">Home</a></li>
+                <li><a href="#skills-section" class="footer__link">Skills</a></li>
+                <li><a href="#project-section" class="footer__link">Projects</a></li>
+            </ul>
+        </div>
+        <div class="footer-box" id="footer-box2">
+            <!-- ------for Socials-------- -->
+            <div class="icons" id="footer-icons">
+                <ul>
+                    <h3><li>Socials</li> </h3>
+                    <li><a href="https://www.linkedin.com/in/akash-pandey-5a53791b9" class="footer__link">Linkedin</a></li>
+                    <li><a href="https://github.com/bitu99" class="footer__link">Github</a></li>
+                    <li><a href="https://twitter.com/the_ak_pandey?t=P-U7HEk1SeA1RXqvp1P4kg&s=08" class="footer__link">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/the_ak_pandey/" class="footer__link">Instagram</a></li>
+                    <li><a href="https://peerlist.io/user" class="footer__link">Peerlist</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-box" id="footer-box3">
+                <ul style="display: flex; flex-direction: column; line-height: 0%; padding: 0; margin: 0; gap: 25%;">
+                    <h3><li>Address</li> </h3>
+                    <li>Mumbai, India</li>
+                    <li>9582723960</li>
+                    <li>newakpandey@gmail.com</li>
+                </ul>
+        </div>
+    </footer>
+    <!-- <footer class="footer section bd-container">
         <div class="footer__container bd-grid">
             <div class="footer__content">
                 <div>
@@ -218,8 +254,8 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; 2023 bitu99. All right reserved</p>
-    </footer>
+    </footer> -->
+    <p class="footer__copy" style="text-align: center;">&#169; 2023 bitu99. All rights reserved</p>
 
 </body>
 </html>
