some changes in footer,project-section etc

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -162,8 +162,8 @@
     <section class="section4" id="project-section">
         <div class="project1">
             <div class = "box5" id="project-description">
-                <h2>Project 1</h2>
-                <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
+                
+                <h5><h2>Project 1</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
                 Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
             </div>
             <div class="box6">
@@ -255,7 +255,7 @@
         </div>
 
     </footer> -->
-    <p class="footer__copy" style="text-align: center;">&#169; 2023 bitu99. All rights reserved</p>
+    <p class="footer__copy" style="text-align: center; height: 5px; font-size: 15px;">&#169; 2023 bitu99. All rights reserved</p>
 
 </body>
 </html>
