made alot of parts responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal portfolio</title>
     <link rel="stylesheet" href="style.css"><!DOCTYPE html>
 <html lang="en">
 <head>
@@ -160,31 +160,31 @@
 
     <h1 class="section4-title">Some of my works</h1><br>
     <section class="section4" id="project-section">
-        <div class="project1">
+        <div class="project" id="project1">
             <div class = "box5" id="project-description">
                 
                 <h5><h2>Project 1</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
+                </h5>
             </div>
             <div class="box6">
                 <img src="project1-img.png" alt="project1">
             </div>
         </div>
-        <div class="project2">
+        <div class="project" id="project2">
             <div class="box7">
                 <img src="project2-img.png" alt="project2">
             </div>
             <div class = "box8" id="project-description2">
                 <h2>Project 2</h2>
                 <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
+                </h5>
             </div>
         </div>
-        <div class="project3">
+        <div class="project" id="project3">
             <div class = "box9" id="project-description">
                 <h2>Project 3</h2>
                 <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                Iure iste accusantium magni, a voluptatibus perferendis et veniam quis. Consectetur veniam porro unde quas excepturi laborum aliquid molestias ut, ipsa maxime eaque. Provident nihil temporibus natus, mollitia eveniet excepturi.</h5>
+                </h5>
             </div>
             <div class="box10">
                 <img src="project3-img.png" alt="project3">
@@ -193,10 +193,10 @@
     </section>
 
     <!-- ------------footer------------- -->
-    <footer>
+    <footer class="footer">
         <div class="footer-box" id="footer-box1">
             <ul style="display: flex; flex-direction: column; line-height: 0%; padding: 0; margin: 0; gap: 25%;">
-                <h3><li>Quick links</li> </h3>
+                <h3><li>Links</li> </h3>
                 <li><a href="#home-section" class="footer__link">Home</a></li>
                 <li><a href="#skills-section" class="footer__link">Skills</a></li>
                 <li><a href="#project-section" class="footer__link">Projects</a></li>
@@ -221,6 +221,7 @@
                     <li>Mumbai, India</li>
                     <li>9582723960</li>
                     <li>newakpandey@gmail.com</li>
+                    <p style="color: white; font-size: 12px; padding-top: 8px; margin-right:12px">&#169; 2023 bitu99. All rights reserved</p>    
                 </ul>
         </div>
     </footer>
@@ -255,7 +256,7 @@
         </div>
 
     </footer> -->
-    <p class="footer__copy" style="text-align: center; height: 5px; font-size: 15px;">&#169; 2023 bitu99. All rights reserved</p>
+    <!-- <p class="footer__copy" style="text-align: center; height: 5px; font-size: 15px; background-color:rgb(48,48,48) ; color: white;">&#169; 2023 bitu99. All rights reserved</p> -->
 
 </body>
 </html>
