added alot of responsivness, [most till date]

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <body>
     <div class="navbar">
         <h1>Akash pandey</h1>
-
+        <i class="ri-menu-line" ></i>
         <div class="nav-part2">
             <ul>
                 <button><a href="#about-me"><li>About</li></a></button>
                 <button><a href="#skills-section"><li>Skills</li></a></button>
-                <button><a href=""><li>Projects</li></a></button>
+                <button><a href="#project-section"><li>Projects</li></a></button>
                 <button><li>Socials</li></button>
             </ul>
         </div>
@@ -36,7 +36,7 @@
             <div class="intro">
                 <h1>Hi, I am Akash</h1>
                 Front-end developer with proven ability to design and develop JavaScript-based applications for web or mobile environments. Strong knowledge of front-end development and computer science fundamentals.
-                <br><button id="resumeBtn"><a href="http://">Resume</a><i class="fa-solid fa-download" style="color: #ffffff;"></i></i></button>
+                <br><button id="resumeBtn"><a href="Akash's Resume (3).pdf" download>Resume</a><i class="fa-solid fa-download" style="color: #ffffff;"></i></i></button>
                 <div class="icons" id="icons1">
                     <button><a href="https://www.linkedin.com/in/akash-pandey-5a53791b9"><i class="fa-brands fa-linkedin-in" style="color: #303030;"></i></a></button>
                     <button><a href="https://github.com/bitu99"><i class="fa-brands fa-github" style="color: #303030;"></i></a></button>
@@ -163,8 +163,9 @@
         <div class="project" id="project1">
             <div class = "box5" id="project-description">
                 
-                <h5><h2>Project 1</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                </h5>
+                <h5>- Made responsive restaurant website.<br>- Has smooth animation on scroll throughout the website. <br>- Hosted on GitHub pages. <br><button><a href="bitu99.github.io/responsive-restaurant-website/"></a>Link</button>
+                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into my code </a></button>
+                    </h5>
             </div>
             <div class="box6">
                 <img src="project1-img.png" alt="project1">
@@ -175,16 +176,17 @@
                 <img src="project2-img.png" alt="project2">
             </div>
             <div class = "box8" id="project-description2">
-                <h2>Project 2</h2>
-                <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                </h5>
+                <h5>- Made coding learning website.<br> - Has quizzes regarding computer science fundamentals and have roadmaps for different technologies.<br> - Hosted on GitHub pages.<br><button><a href="bitu99.github.io/responsive-restaurant-website/"></a>Link</button>
+                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into my code</a></button>
+                    </h5>
             </div>
         </div>
         <div class="project" id="project3">
-            <div class = "box9" id="project-description">
-                <h2>Project 3</h2>
-                <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto necessitatibus quam ex tenetur suscipit voluptatibus pariatur quos iusto maiores, alias, enim perferendis repellendus sapiente reiciendis harum quidem exercitationem officiis dolorum.
-                </h5>
+            <div class = "box9" id="project-description3">
+                <h5>- Made calculator using HTML, CSS and vanilla Javascript.<br> - Has clean UI with all buttons working accordingly and all arithmetic operations performing seamlessly.<br> - Hosted on GitHub pages.<br><button><a href="bitu99.github.io/js-calculator/
+                    "></a>Link</button>
+                    <br><button><a href="https://github.com/bitu99/js-calculator">Peek into my code</a></button>
+                    </h5>
             </div>
             <div class="box10">
                 <img src="project3-img.png" alt="project3">
