Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
             <div class="box" id="box1">
                 <div class="text">HTML</div>
                 <div class="progress-line">
-                    <div id="progress1"></div>
+                    <div class="progress" id="progress1"></div>
                 </div>
             </div>
             <div class="box" id="box2">
                 <div class="text">CSS</div>
                 <div class="progress-line">
-                    <div id="progress2"></div>
+                    <div class="progress" id="progress2"></div>
                 </div>
             </div>
             <div class="box" id="box3">
                 <div class="text">Javascript</div>
                 <div class="progress-line">
-                    <div id="progress3"></div>
+                    <div class="progress" id="progress3"></div>
                 </div>
             </div>
         </div>
@@ -98,19 +98,19 @@
             <div class="box" id="box4">
                 <div class="text">Java</div>
                 <div class="progress-line">
-                    <div id="progress4"></div>
+                    <div class="progress" id="progress4"></div>
                 </div>
             </div>
             <div class="box" id="box5">
                 <div class="text">Mysql</div>
                 <div class="progress-line">
-                    <div id="progress5"></div>
+                    <div class="progress" id="progress5"></div>
                 </div>
             </div>
             <div class="box" id="box6">
                 <div class="text">Responsive <br>design</div>
                 <div class="progress-line">
-                    <div id="progress6"></div>
+                    <div class="progress" id="progress6"></div>
                 </div>
             </div>
         </div>
@@ -119,19 +119,19 @@
             <div class="box" id="box7">
                 <div class="text">React.js</div>
                 <div class="progress-line">
-                    <div id="progress7"></div>
+                    <div class="progress" id="progress7"></div>
                 </div>
             </div>
             <div class="box" id="box8">
                 <div class="text">TailwindCSS</div>
                 <div class="progress-line">
-                    <div id="progress8"></div>
+                    <div class="progress" id="progress8"></div>
                 </div>
             </div>
             <div class="box" id="box9">
                 <div class="text">Git & GitHub</div>
                 <div class="progress-line">
-                    <div id="progress9"></div>
+                    <div class="progress" id="progress9"></div>
                 </div>
             </div>
         </div>
