--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
         <div class="project" id="project1">
             <div class = "box5" id="project-description">
                 
-                <h5>- Made responsive restaurant website.<br>- Has smooth animation on scroll throughout the website. <br>- Hosted on GitHub pages. <br><button><a href="bitu99.github.io/responsive-restaurant-website/"></a>Link</button>
-                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into my code </a></button>
+                <h5>- Made responsive restaurant website.<br>- Has smooth animation on scroll throughout the website. <br>- Hosted on GitHub pages. <br>
+                    <button><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
+                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code </a></button>
                     </h5>
             </div>
             <div class="box6">
@@ -176,16 +177,18 @@
                 <img src="project2-img.png" alt="project2">
             </div>
             <div class = "box8" id="project-description2">
-                <h5>- Made coding learning website.<br> - Has quizzes regarding computer science fundamentals and have roadmaps for different technologies.<br> - Hosted on GitHub pages.<br><button><a href="bitu99.github.io/responsive-restaurant-website/"></a>Link</button>
-                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into my code</a></button>
+                <h5>- Made coding learning website.<br> - Has quizzes regarding computer science fundamentals and have roadmaps for different technologies.<br> - Hosted on GitHub pages.<br>
+                    <button><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
+                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code</a></button>
                     </h5>
             </div>
         </div>
         <div class="project" id="project3">
             <div class = "box9" id="project-description3">
-                <h5>- Made calculator using HTML, CSS and vanilla Javascript.<br> - Has clean UI with all buttons working accordingly and all arithmetic operations performing seamlessly.<br> - Hosted on GitHub pages.<br><button><a href="bitu99.github.io/js-calculator/
-                    "></a>Link</button>
-                    <br><button><a href="https://github.com/bitu99/js-calculator">Peek into my code</a></button>
+                <h5>- Made calculator using HTML, CSS and vanilla Javascript.<br> - Has clean UI with all buttons working accordingly and all arithmetic operations performing seamlessly.<br> - Hosted on GitHub pages.<br>
+                    <button><a href="bitu99.github.io/js-calculator/
+                    ">Link</a></button>
+                    <br><button><a href="https://github.com/bitu99/js-calculator">Peek into code</a></button>
                     </h5>
             </div>
             <div class="box10">
