--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
              one), I would love to work with businesses both small and large!
              <br><br>
  
-             I have created many web applications, click to see some of my works.<br><br><br><br>
+             I have created many web applications, click to see some of my works.<br><br>
  
              <button class="portfolio-btn">Portfolio</button>
             </div>
@@ -162,10 +162,13 @@
     <section class="section4" id="project-section">
         <div class="project" id="project1">
             <div class = "box5" id="project-description">
-                
-                <h5>- Made responsive restaurant website.<br>- Has smooth animation on scroll throughout the website. <br>- Hosted on GitHub pages. <br>
-                    <button><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
-                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code </a></button>
+                <h5><ul>
+                    <li>Made responsive restaurant website.</li>
+                    <li>Has smooth animation on scroll throughout the website.</li>
+                    <li>Hosted on GitHub pages.</li>
+                </ul></h5><br>
+                    <button class="project-btn" id="box5-btn1"><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
+                    <button class="project-btn" id="box5-btn2"><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code </a></button>
                     </h5>
             </div>
             <div class="box6">
@@ -177,23 +180,31 @@
                 <img src="project2-img.png" alt="project2">
             </div>
             <div class = "box8" id="project-description2">
-                <h5>- Made coding learning website.<br> - Has quizzes regarding computer science fundamentals and have roadmaps for different technologies.<br> - Hosted on GitHub pages.<br>
-                    <button><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
-                    <br><button><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code</a></button>
+                <h5><ul>
+                    <li>Made coding learning website.</li>
+                    <li>Has quizzes regarding computer science fundamentals and have roadmaps for different technologies.</li>
+                    <li>Hosted on GitHub pages.</li>
+                </ul></h5><br>
+                    <button class="project-btn" id="box5-btn3"><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
+                    <button class="project-btn" id="box5-btn4"><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code</a></button>
                     </h5>
             </div>
         </div>
         <div class="project" id="project3">
             <div class = "box9" id="project-description3">
-                <h5>- Made calculator using HTML, CSS and vanilla Javascript.<br> - Has clean UI with all buttons working accordingly and all arithmetic operations performing seamlessly.<br> - Hosted on GitHub pages.<br>
-                    <button><a href="bitu99.github.io/js-calculator/
+                <h5><ul>
+                    <li>Made calculator using HTML, CSS and vanilla Javascript.</li>
+                    <li>Has clean UI with all buttons working accordingly and all arithmetic operations performing seamlessly.</li>
+                    <li>Hosted on GitHub pages.</li>
+                </ul></h5><br>
+                    <button class="project-btn" id="box5-btn5"><a href="bitu99.github.io/js-calculator/
                     ">Link</a></button>
-                    <br><button><a href="https://github.com/bitu99/js-calculator">Peek into code</a></button>
+                    <button class="project-btn" id="box5-btn6"><a href="https://github.com/bitu99/js-calculator">Peek into code</a></button>
                     </h5>
             </div>
             <div class="box10">
                 <img src="project3-img.png" alt="project3">
-            </div>
+            </div><br><br>
         </div>
     </section>
 
@@ -230,38 +241,6 @@
                 </ul>
         </div>
     </footer>
-    <!-- <footer class="footer section bd-container">
-        <div class="footer__container bd-grid">
-            <div class="footer__content">
-                <div>
-                    <a href="#" class="footer__social"><i class='bx bxl-linkedin'></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-github'></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
-                </div>
-            </div>
-
-            <div class="footer__content">
-                <h3 class="footer__title">Quick links</h3>
-                <ul>
-                    <li><a href="#" class="footer__link">Home</a></li>
-                    <li><a href="#" class="footer__link">Skills</a></li>
-                    <li><a href="#" class="footer__link">Projects</a></li>
-                    <li><a href="#" class="footer__link">Reserve your spot</a></li>
-                </ul>
-            </div>
-
-            <div class="footer__content">
-                <h3 class="footer__title">Adress</h3>
-                <ul>
-                    <li>Mumbai, India</li>
-                    <li>9592723960</li>
-                    <li>newakpandey@gmail.com</li>
-                </ul>
-            </div>
-        </div>
-
-    </footer> -->
-    <!-- <p class="footer__copy" style="text-align: center; height: 5px; font-size: 15px; background-color:rgb(48,48,48) ; color: white;">&#169; 2023 bitu99. All rights reserved</p> -->
-
+   
 </body>
 </html>
