new skill-section

--- a/index.html
+++ b/index.html
@@ -90,8 +90,65 @@
          </div>
     </section>
 
-    <h1 class="skill-text">Skills, I have</h1>
-    <section class="progress-bars" id="skills-section">
+    <!-- <h1 class="skill-text">Skills, I have</h1> -->
+    <section class="skill-slider" id="section3">
+        <div class="box" id="box1">
+            <h1>Skills,<br> I have</h1>
+        </div>
+        <div class="box" id="box2">
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">HTML</div>
+                <div class="progress-box"><div id="progress1"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">CSS</div>
+                <div class="progress-box"><div id="progress2"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">JavaScript</div>
+                <div class="progress-box"><div id="progress3"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">Java</div>
+                <div class="progress-box"><div id="progress4"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">C++</div>
+                <div class="progress-box"><div id="progress5"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">React</div>
+                <div class="progress-box"><div id="progress6"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">Tailwind</div>
+                <div class="progress-box"><div id="progress7"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">Mysql</div>
+                <div class="progress-box"><div id="progress8"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">Responsive<br> design</div>
+                <div class="progress-box"><div id="progress9"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">Figma</div>
+                <div class="progress-box"><div id="progress10"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">DSA</div>
+                <div class="progress-box"><div id="progress11"></div></div>
+            </div>
+            <div class="skill-box" id="s-box1">
+                <div class="s-text">OOPs</div>
+                <div class="progress-box"><div id="progress12"></div></div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- <section class="progress-bars" id="skills-section">
         <div class="bar-box">
             <div class="box" id="box1">
                 <div class="text">HTML</div>
@@ -154,7 +211,7 @@
                 </div>
             </div>
         </div>
-    </section><br><br>
+    </section><br><br> -->
 
     <!-- -------------project-section----------- -->
 
