--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
     <section class="section5">
         <div class="form">
-            <h1 style="font-size: 4vh;">Drop me a message</h1>
+            <h1 style="font-size: 4vh;">Drop me a message</h1><br>
         
             <form action="main.php" method="post" autocomplete="off">
                 <input type="text" name="name" placeholder="Your name">
