--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
  
              I have created many web applications, click to see some of my works.<br><br>
  
-             <button class="portfolio-btn">Portfolio</button>
+             <button class="portfolio-btn"><a style="text-decoration: none; color: white;" href="#project-section">Portfolio</a></button>
             </div>
          </div>
     </section>
