project link btn not working issue resolved

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <li>Has smooth animation on scroll throughout the website.</li>
                     <li>Hosted on GitHub pages.</li>
                 </ul></h5><br>
-                    <button class="project-btn" id="box5-btn1"><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
+                    <button class="project-btn" id="box5-btn1"><a href="https://bitu99.github.io/responsive-restaurant-website/">Link</a></button>
                     <button class="project-btn" id="box5-btn2"><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code </a></button>
                     </h5>
             </div>
@@ -176,8 +176,8 @@
                     <li>Has quizzes regarding computer science fundamentals and have roadmaps for different technologies.</li>
                     <li>Hosted on GitHub pages.</li>
                 </ul></h5><br>
-                    <button class="project-btn" id="box5-btn3"><a href="bitu99.github.io/responsive-restaurant-website/">Link</a></button>
-                    <button class="project-btn" id="box5-btn4"><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code</a></button>
+                    <button class="project-btn" id="box5-btn3"><a href="https://bitu99.github.io/coding-learning-platform_CODEBOX/">Link</a></button>
+                    <button class="project-btn" id="box5-btn4"><a href="https://github.com/bitu99/coding-learning-platform_CODEBOX">Peek into code</a></button>
                     </h5>
             </div>
         </div>
@@ -188,8 +188,7 @@
                     <li>Has clean UI with all buttons working accordingly and all arithmetic operations performing seamlessly.</li>
                     <li>Hosted on GitHub pages.</li>
                 </ul></h5><br>
-                    <button class="project-btn" id="box5-btn5"><a href="bitu99.github.io/js-calculator/
-                    ">Link</a></button>
+                    <button class="project-btn" id="box5-btn5"><a href="https://bitu99.github.io/js-calculator/">Link</a></button>
                     <button class="project-btn" id="box5-btn6"><a href="https://github.com/bitu99/js-calculator">Peek into code</a></button>
                     </h5>
             </div>
