--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <li>Hosted on GitHub pages.</li>
                 </ul></h5><br>
                     <button class="project-btn" id="box5-btn1"><a href="https://bitu99.github.io/responsive-restaurant-website/">Link</a></button>
-                    <button class="project-btn" id="box5-btn2"><a href="https://github.com/bitu99/responsive- restaurant-website">Peek into code </a></button>
+                    <button class="project-btn" id="box5-btn2"><a href="https://github.com/bitu99/responsive-restaurant-website">Peek into code </a></button>
                     </h5>
             </div>
             <div class="box6">
