--- a/index.html
+++ b/index.html
@@ -16,23 +16,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/de8496d5b8.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="navbar">
         <h1>Akash pandey</h1>
+        <i class="ri-close-fill" style="display: none; font-size: 3.4vh"></i>
         <i class="ri-menu-line" ></i>
         <div class="nav-part2">
             <ul>
                 <button><a href="#about-me"><li>About</li></a></button>
-                <button><a href="#skills-section"><li>Skills</li></a></button>
+                <button><a href="#section3"><li>Skills</li></a></button>
                 <button><a href="#project-section"><li>Projects</li></a></button>
-                <button><li>Socials</li></button>
+                <button><a href="#footer-section"><li>Socials</li></a></button>
             </ul>
         </div>
     </div>
 
     <section class = "section1" id="home-section">
         <div class="box1">
+            <div style="display: none;" class="nav-part3">
+                <ul>
+                    <button><a href="#about-me"><li>About</li></a></button>
+                    <button><a href="#section3"><li>Skills</li></a></button>
+                    <button><a href="#project-section"><li>Projects</li></a></button>
+                    <button><a href="#footer-section"><li>Socials</li></a></button>
+                </ul>
+            </div>
             <div class="intro">
                 <h1>Hi, I am Akash</h1>
                 Front-end developer with proven ability to design and develop JavaScript-based applications for web or mobile environments. Strong knowledge of front-end development and computer science fundamentals.
@@ -217,7 +227,7 @@
     </section>
 
     <!-- ------------footer------------- -->
-    <footer class="footer">
+    <footer class="footer" id="footer-section">
         <div class="footer-box" id="footer-box1">
             <ul style="display: flex; flex-direction: column; line-height: 0%; padding: 0; margin: 0; gap: 25%;">
                 <h3><li>Links</li> </h3>
@@ -249,6 +259,6 @@
                 </ul>
         </div>
     </footer>
-   
+   <script src="script.js"></scri>
 </body>
 </html>
