--- a/index.html
+++ b/index.html
@@ -259,6 +259,6 @@
                 </ul>
         </div>
     </footer>
-   <script src="script.js"></scri>
+   <script src="script.js"></script>
 </body>
 </html>
