added animation in nav part3 aka menu section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal portfolio</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +36,10 @@
 
     <section class = "section1" id="home-section">
         <div class="box1">
-            <div style="display: none;" class="nav-part3">
+            <div style="display: none;" data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="500"
+            data-aos-duration="500" class="nav-part3">
                 <ul>
                     <button><a href="#about-me"><li>About</li></a></button>
                     <button><a href="#section3"><li>Skills</li></a></button>
@@ -259,6 +263,10 @@
                 </ul>
         </div>
     </footer>
-   <script src="script.js"></scri>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+   <script src="script.js"></script>
 </body>
 </html>
