similar to previous commit

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                     <button class="project-btn" id="box5-btn2"><a href="https://github.com/bitu99/responsive-restaurant-website">Peek into code </a></button>
                     </h5>
             </div> -->
-            <div class="box6">
+<!--             <div class="box6">
                 <img src="project1-img.png" alt="project1">
-            </div>
+            </div> -->
         </div>
         <div class="project" id="project2">
             <div class="box7">
