--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
 
     <section class = "section1" id="home-section">
         <div class="box1">
-            <div style="display: none;" data-aos="fade-left"
-            data-aos-anchor="#example-anchor"
-            data-aos-offset="500"
-            data-aos-duration="500" class="nav-part3">
+            <div style="display: none;" data-aos="fade-left" class="nav-part3">
                 <ul>
                     <button><a href="#about-me"><li>About</li></a></button>
                     <button><a href="#section3"><li>Skills</li></a></button>
